--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = lldpd
-url = https://github.com/lldpd/lldpd/releases/download/1.0.17/lldpd-1.0.17.tar.gz
+url = https://github.com/lldpd/lldpd/releases/download/1.0.18/lldpd-1.0.18.tar.gz
 archives = 
 giturl = https://github.com/lldpd/lldpd.git
 domain = 
@@ -71,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = true
+# use ninja build files
+use_ninja = false
 # require package verification for build
 verify_required = false
 
